--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Carlos
-configuracion.autor.email=carlos@email.com
+configuracion.texto=Configurando entorno Desarrollo ...
+configuracion.autor.nombre=Carlitos
+configuracion.autor.email=carlitos@email.com
